--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,7 @@
     <!-- Add Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
     <!-- Your custom CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../stylesheet/style.css">
     
     <!-- Remove Bootstrap JS from here -->
     <style>
