--- a/pages/profile.html
+++ b/pages/profile.html
@@ -244,13 +244,13 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html">
+        <a href="../index.html">
           <img src="../images/Pic1.png" alt="navnirman.ai Logo" />
         </a>
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="events.html">Book an Event</a></li>
@@ -343,7 +343,7 @@
         auth
           .signOut()
           .then(() => {
-            window.location.href = "index.html";
+            window.location.href = "../index.html";
           })
           .catch((error) => {
             console.error("Error signing out:", error);
