--- a/pages/services.html
+++ b/pages/services.html
@@ -206,13 +206,13 @@
     <div class="earth-bg"></div>
     <header>
         <div class="logo">
-            <a href="index.html">
+            <a href="../index.html">
                 <img src="../images/pic1.png" alt="navnirman.ai Logo">
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="events.html">Book an Event</a></li>
@@ -354,7 +354,7 @@
         // Sign out function
         function signOut() {
             auth.signOut().then(() => {
-                window.location.href = 'index.html';
+                window.location.href = '../index.html';
             }).catch((error) => {
                 console.error('Error signing out:', error);
             });
