--- a/pages/settings.html
+++ b/pages/settings.html
@@ -115,13 +115,13 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html">
+        <a href="../index.html">
           <img src="../images/Pic.png" alt="Logo" />
         </a>
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="events.html">Book an Event</a></li>
