--- a/pages/signin.html
+++ b/pages/signin.html
@@ -204,7 +204,7 @@
 
         try {
           await auth.signInWithEmailAndPassword(email, password);
-          window.location.href = "index.html";
+          window.location.href = "../index.html";
         } catch (error) {
           showMessage("signin-error", error.message, true);
         } finally {
