--- a/pages/support.html
+++ b/pages/support.html
@@ -120,11 +120,10 @@
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="events.html">Book an Event</a></li>
-          <li><a href="signin.html" class="auth-btn">Sign In / Up</a></li>
         </ul>
       </nav>
     </header>
